# saluki

./: .gitignore  README.md  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 67994ef648ef_add_initial_tables.py  e1e943473fa5_add_doi_property_to_datafile.py
app/: enums.py
app/dependencies/: database.py
app/models/: datafiles.py  permissions.py  users.py
app/schemas/: datafiles.py  users.py
saluki/: config.py  enums.py  main.py
saluki/dependencies/: database.py  security.py
saluki/models/: __init__.py  datafiles.py  permissions.py  users.py
saluki/routers/: datafiles.py  permissions.py  users.py
saluki/schemas/: __init__.py  datafiles.py  permissions.py  users.py
saluki/utils/: email.py
