[tool.poetry]
name = "saluki"
version = "0.0.1"
description = "DataCite Data Files Service"
authors = ["Mike Bennett <mbennett@datacite.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
ujson = "^5.9.0"
uvicorn = "^0.27.0"
email-validator = "^2.1.0.post1"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
httpx = "^0.26.0"
jinja2 = "^3.1.3"
itsdangerous = "^2.1.2"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'